[package]
name = "gen_id_component"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ref-cast = "1"
force_derive = { git = "https://github.com/frsrblch/force_derive" }
iter_context = { git = "https://github.com/frsrblch/iter_context" }
gen_id_allocator = { git = "https://github.com/frsrblch/gen_id_allocator", features = ['untyped'] }

[dev-dependencies]
gen_id_allocator = { git = "https://github.com/frsrblch/gen_id_allocator", features = ['id_creation', 'assert_valid'] }
